Update image uploading flow
